--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-aws.s3.accessid=AKIA4DNDJF4CJSZ3ZDSK
-aws.s3.accesssecret=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
+aws.s3.accessid=
+aws.s3.accesssecret=
